# ml-algos-from-scratch

./: .gitignore  AGENTS.md  Justfile  README.md  lab01.ipynb  lab02.ipynb  notebook-image-extractor.py  opencode.json  pyproject.toml
.agents/skills/jupyter-typst-report/: SKILL.md
.agents/skills/jupyter-typst-report/scripts/: parse_notebook_content.py
week01/: README.md  lab01.ipynb  main.typ
week02/: dataset.csv  lab02.ipynb  main.typ
week03/: lab03.ipynb  main.typ
week04/: lab04.ipynb  main.typ
week05/: car.data  lab05.ipynb  main.typ
week06/: lab06.ipynb  main.typ
week09/: Untitled1.ipynb  lab09.ipynb  main.typ
week10/: lab10.ipynb  main.typ
